<resources>
    <string name="app_name">Movie List</string>
    <string name="nameMissing">NAME MISSING</string>
    <string name="movieNameFormat" translatable="false">%1$s (%2$d)</string>
    <string name="allGenres">All Genres</string>
    <string name="allMovies">All Movies</string>
    <string name="myVotes">My Votes</string>
    <string name="myUpvotes">My Upvotes</string>
    <string name="myDownvotes">My Downvotes</string>
    <string name="movieDetails">Movie Details</string>
    <string name="noDescription">No description.</string>
    <string name="invalidDate">Invalid Date</string>
    <string name="notImplemented">Not Implemented.</string>
    <string name="reviewCountText" translatable="false">%1$d %2$s</string>
    <string name="loginButton">Login</string>
    <string name="actionSignOut">Sign Out</string>
    <string name="home">Home</string>
    <string name="movieList">Movie List</string>
    <string name="movies">Movies</string>
    <string name="users">Users</string>
    <string name="shareGame">Share Game</string>
    <string name="movieBannerDescription">Banner for movie</string>
    <string name="screenshot_1">Screenshot 1</string>
    <string name="screenshot_2">Screenshot 2</string>
    <string name="screenshot_3">Screenshot 3</string>
    <string name="movieThumbnailDescription">Thumbnail for Movie</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="unknownGenre">Unknown Genre</string>
    <string name="actionGenre">Action</string>
    <string name="comedyGenre">Comedy</string>
    <string name="romanceGenre">Romance</string>
    <string name="genre_1">Genre 1</string>
    <string name="genre_2">Genre 2</string>
    <string name="genre_3">Genre 3</string>
    <string name="errorMovieNotFound">Movie not found.</string>
    <string name="movieHasNoName">Movie does not have a name.</string>
    <string name="shareGameMessage">"Check this movie out! "</string>
    <string name="errorFetchingVotes">Error getting votes.</string>
    <string name="errorFetchingGenres">Error getting genres.</string>
    <string name="errorSaveVote">Failed to save vote.</string>
    <string name="voteSaved">Vote saved.</string>
    <string name="errorRemoveVote">Failed to remove vote.</string>
    <string name="voteRemoved">Vote removed.</string>
    <string name="errorFetchingMovies">Error getting movies.</string>
    <string name="moviesUpdated">Movies Updated.</string>
    <string name="votesUpdated">Votes Updated.</string>
    <string name="genresUpdated">Genres Updated.</string>
    <string name="errorNoMovieSelected">No movie selected.</string>
    <string name="errorFetchingMovie">Error getting movie.</string>
    <string name="movieUpdated">Movie updated.</string>
    <string name="errorMovieDoesNotExist">Movie does not exist.</string>
    <string name="errorFetchingReviews">Error getting reviews.</string>
    <string name="reviewsUpdated">Reviews updated.</string>
    <string name="errorCurrentlySignedOut">You are currently signed-out.</string>
    <string name="profileUpdated">Profile updated.</string>
    <string name="errorUpdateProfile">Failed to update profile.</string>
    <string name="errorFetchingUsers">Failed to get users.</string>
    <string name="continueAsGuest">Continue as guest</string>
    <string name="userProfile">User Profile</string>
    <string name="composeReview">Compose Review</string>
    <string name="browseEbay">Browse eBay</string>
    <string name="viewMovie">View Movie</string>
    <string name="viewUser">View User</string>
    <string name="myProfile">My Profile</string>

    <plurals name="game">
        <item quantity="one">game</item>
        <item quantity="other">games</item>
    </plurals>
    <plurals name="review">
        <item quantity="one">review</item>
        <item quantity="other">reviews</item>
    </plurals>

    <!--    <string-array name="genreFilters">-->
    <!--        <item>All Genres</item>-->
    <!--        <item>Action</item>-->
    <!--        <item>Comedy</item>-->
    <!--        <item>Romance</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="listFilters">-->
    <!--        <item>All Movies</item>-->
    <!--        <item>My Votes</item>-->
    <!--        <item>My Upvotes</item>-->
    <!--        <item>My Downvotes</item>-->
    <!--    </string-array>-->

</resources>