<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_movie_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_movie_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_movie_image"
            android:layout_width="@dimen/movieThumbnailWidth"
            android:layout_height="@dimen/movieThumbnailHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_broken_image"
            android:contentDescription="@string/movieThumbnailDescription" />

        <TextView
            android:id="@+id/item_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_movie_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="MOVIE NAME" />

        <TextView
            android:id="@+id/item_movie_director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_movie_image"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_name"
            tools:text="MOVIE DIRECTOR" />

        <ImageButton
            android:id="@+id/item_movie_upvote"
            android:layout_width="@dimen/voteButtonSize"
            android:layout_height="@dimen/voteButtonSize"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/item_movie_image"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_director"
            app:srcCompat="@drawable/ic_thumbs_up_outline"
            android:contentDescription="@string/upvote" />

        <ImageButton
            android:id="@+id/item_movie_downvote"
            android:layout_width="@dimen/voteButtonSize"
            android:layout_height="@dimen/voteButtonSize"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/item_movie_upvote"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_director"
            app:srcCompat="@drawable/ic_thumbs_down_outline"
            android:contentDescription="@string/downvote" />

        <ImageView
            android:id="@+id/item_movie_genre_1"
            android:layout_width="@dimen/genreIconSize"
            android:layout_height="@dimen/genreIconSize"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_image"
            app:srcCompat="@drawable/ic_downloading"
            tools:srcCompat="@drawable/ic_action_512px"
            android:contentDescription="@string/genre_1" />

        <ImageView
            android:id="@+id/item_movie_genre_2"
            android:layout_width="@dimen/genreIconSize"
            android:layout_height="@dimen/genreIconSize"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_movie_genre_1"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_image"
            app:srcCompat="@drawable/ic_downloading"
            tools:srcCompat="@drawable/ic_comedy_512px"
            android:contentDescription="@string/genre_2" />

        <ImageView
            android:id="@+id/item_movie_genre_3"
            android:layout_width="@dimen/genreIconSize"
            android:layout_height="@dimen/genreIconSize"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_movie_genre_2"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_image"
            app:srcCompat="@drawable/ic_downloading"
            tools:srcCompat="@drawable/ic_romance_512px"
            android:contentDescription="@string/genre_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>